--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="nav">
       <div class="logo">
-        <img src="/project/Images/Logo.png" alt="logo" />
+        <img src="../project/Images/Logo.png" alt="logo" />
       </div>
       <ul class="nav-list">
         <a href="#home"> <li class="nav-item">Home</li></a>
@@ -34,7 +34,7 @@
       </ul>
       <ul class="nav-list">
         <li>
-          <img src="/project/Images/Language.png" alt="Language" />
+          <img src="../project/Images/Language.png" alt="Language" />
         </li>
         <li class="nav-item username login" id="username-login">Login</li>
         <li class="nav-item username signup" id="username-signup">Sign up</li>
@@ -65,25 +65,24 @@
           <div class="modal-body">
             <form id="signup-form">
               <label for="signupUsername">Username:</label>
-              <input
-                type="text"
-                id="signupUsername"
-                name="signupUsername"
-                required
-              />
-
+              <input type="text" id="signUpusername" name="username" required />
+              <span id="username-error" class="error"></span>
               <label for="email">Email:</label>
               <input type="email" id="email" name="email" required />
+              <span id="email-error" class="error"></span>
 
-              <label for="signupPassword">Password:</label>
+              <label for="password">Password:</label>
               <input
                 type="password"
                 id="signupPassword"
-                name="signupPassword"
+                name="password"
                 required
               />
+              <span id="password-error" class="error"></span>
 
-              <input type="submit" value="Submit" />
+              <span id="repeat-password-error" class="error"></span>
+
+              <input type="submit" value="Submit" id="signup-username" />
             </form>
           </div>
         </div>
@@ -108,23 +107,23 @@
           <div class="stars flex">
             <div class="future flex">
               <img
-                src="/project/Images/star (3).png"
+                src="../project/Images/star (3).png"
                 alt="star"
                 class="future"
               />
               <img
-                src="/project/Images/robot-hand-finger-pointing-ai-technology-backgrou-2022-09-16-09-23-42-utc 1.png"
+                src="../project/Images/robot-hand-finger-pointing-ai-technology-backgrou-2022-09-16-09-23-42-utc 1.png"
                 alt="robot-finger"
               />
               <img
-                src="/project/images/two stars.png"
+                src="../project/images/two stars.png"
                 alt="stars"
                 class="future"
               />
             </div>
             <div class="ai-text">
               <div class="letter">
-                <img src="/project/Images/Polygon 3.png" alt="polygon" />
+                <img src="../project/Images/Polygon 3.png" alt="polygon" />
               </div>
               <div class="letter">a</div>
               <div class="letter">r</div>
@@ -149,7 +148,7 @@
               <div class="letter">n</div>
               <div class="letter">c</div>
               <div class="letter">e</div>
-              <img src="/project/Images/Subtract.png" alt="" class="letter" />
+              <img src="../project/Images/Subtract.png" alt="" class="letter" />
             </div>
           </div>
         </div>
@@ -168,8 +167,8 @@
         </p>
       </div>
       <div class="lorem-ipsum">
-        <span><img src="/project/Images/eclipse.png" alt="eclipse" /></span>
-        <span><img src="/project/Images/rocket.png" alt="rocket" /></span>
+        <span><img src="../project/Images/eclipse.png" alt="eclipse" /></span>
+        <span><img src="../project/Images/rocket.png" alt="rocket" /></span>
         <div>
           <span>Lorem</span>
           <div>
@@ -177,7 +176,7 @@
             industry.
           </div>
         </div>
-        <span><img src="/project/Images/idea.png" alt="idea" /></span>
+        <span><img src="../project/Images/idea.png" alt="idea" /></span>
         <div>
           <span>Lorem</span>
           <div>
@@ -187,14 +186,14 @@
             </p>
           </div>
         </div>
-        <span><img src="/project/Images/robo-kid.png" alt="robo-kid" /></span>
+        <span><img src="../project/Images/robo-kid.png" alt="robo-kid" /></span>
       </div>
     </section>
 
     <section class="robot-technology-section area" id="services">
       <div class="robot-technology-image-container">
         <img
-          src="/project/images/life-5130779_1920.png"
+          src="../project/images/life-5130779_1920.png"
           alt="Robot Technology Illustration"
         />
       </div>
@@ -222,20 +221,20 @@
     <section class="partner area">
       <span class="partner-title flex">Lorem Ipsum Dollar</span>
       <div class="company area flex">
-        <img src="/project/images/logo1.png" alt="logo1" />
-        <img src="/project/images/logo2.png" alt="logo2" />
-        <img src="/project/images/logo3.png" alt="logo3" />
-        <img src="/project/images/logo4.png" alt="logo4" />
-        <img src="/project/images/logo5.png" alt="logo5" />
-        <img src="/project/images/Logo 6.png" alt="logo6" />>
-        <img src="/project/images/Logo 7.png" alt="logo7" />
+        <img src="../project/images/logo1.png" alt="logo1" />
+        <img src="../project/images/logo2.png" alt="logo2" />
+        <img src="../project/images/logo3.png" alt="logo3" />
+        <img src="../project/images/logo4.png" alt="logo4" />
+        <img src="../project/images/logo5.png" alt="logo5" />
+        <img src="../project/images/Logo 6.png" alt="logo6" />>
+        <img src="../project/images/Logo 7.png" alt="logo7" />
       </div>
       <div class="company area flex">
-        <img src="/project/images/logo8.png" alt="logo8" />
-        <img src="/project/images/Logo 9.png" alt="logo9" />
-        <img src="/project/images/logo 10.png" alt="logo10" />
-        <img src="/project/images/Logo 11.png" alt="logo11" />
-        <img src="/project/images/Logo 12.png" alt="logo12" />
+        <img src="../project/images/logo8.png" alt="logo8" />
+        <img src="../project/images/Logo 9.png" alt="logo9" />
+        <img src="../project/images/logo 10.png" alt="logo10" />
+        <img src="../project/images/Logo 11.png" alt="logo11" />
+        <img src="../project/images/Logo 12.png" alt="logo12" />
       </div>
     </section>
 
@@ -245,7 +244,7 @@
         <ul class="events-list flex-row area">
           <li class="event flex-column" key="1">
             <img
-              src="/project/images/man-1.png"
+              src="../project/images/man-1.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
@@ -263,7 +262,7 @@
           <!-- Repeat the li element for other events -->
           <li class="event flex-column" key="1">
             <img
-              src="/project/images/man-2.png"
+              src="../project/images/man-2.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
@@ -280,7 +279,7 @@
           </li>
           <li class="event flex-column" key="1">
             <img
-              src="/project/images/woman-1.png"
+              src="../project/images/woman-1.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
@@ -297,7 +296,7 @@
           </li>
           <li class="event flex-column" key="1">
             <img
-              src="/project/images/Half-man.png"
+              src="../project/images/Half-man.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
