add new features

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="modal.css" />
-    <link rel="stylesheet" href="navigation.css" />
-    <link rel="stylesheet" href="firsSection.css" />
-    <link rel="stylesheet" href="secondSection.css" />
-    <link rel="stylesheet" href="thidsection.css" />
-    <link rel="stylesheet" href="fourthsection.css" />
-    <link rel="stylesheet" href="fifthSection.css" />
-    <link rel="stylesheet" href="f.a.q.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="../project/Css/reset.css" />
+    <link rel="stylesheet" href="../project/Css/style.css" />
+    <link rel="stylesheet" href="../project/Css/modal.css" />
+    <link rel="stylesheet" href="../project/Css/navigation.css" />
+    <link rel="stylesheet" href="../project/Css/firsSection.css" />
+    <link rel="stylesheet" href="../project/Css/secondSection.css" />
+    <link rel="stylesheet" href="../project/Css/thidsection.css" />
+    <link rel="stylesheet" href="../project/Css/fourthsection.css" />
+    <link rel="stylesheet" href="../project/Css/fifthSection.css" />
+    <link rel="stylesheet" href="../project/Css/f.a.q.css" />
+    <link rel="stylesheet" href="../project/Css/footer.css" />
 
     <title>A.I:Future is here</title>
   </head>
@@ -427,13 +427,13 @@
           <div class="social-links">
             <div class="social-links">
               <a href="https://www.linkedin.com/"
-                ><img src="/project/images/link.png" alt="LinkedIn"
+                ><img src="../project/images/link.png" alt="LinkedIn"
               /></a>
               <a href="https://www.facebook.com/"
-                ><img src="/project/images/Fb (2).png" alt="Facebook"
+                ><img src="../project/images/Fb (2).png" alt="Facebook"
               /></a>
               <a href="#"
-                ><img src="/project/images/twitter (2).png" alt="Twitter"
+                ><img src="../project/images/twitter (2).png" alt="Twitter"
               /></a>
             </div>
           </div>
