add new features

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../project/Css/fifthSection.css" />
     <link rel="stylesheet" href="../project/Css/f.a.q.css" />
     <link rel="stylesheet" href="../project/Css/footer.css" />
+    <link rel="stylesheet" href="../project/Css/animation.css" />
 
     <title>A.I:Future is here</title>
   </head>
