add confirm password

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                 name="password"
                 required
               />
+              <label for="password">Confirm Password:</label>
+              <input
+                type="password"
+                id="signupConfirmPassword"
+                name="password"
+                required
+              />
+
               <span id="password-error" class="error"></span>
 
               <span id="repeat-password-error" class="error"></span>
