--- a/test.html
+++ b/test.html
@@ -1,47 +1,27 @@
-<section class="frequently-asked-questions area">
-  <div class="faq flex-collum area">
-    <div class="flex-centre faq-header">
-      <p>Frequently Asked Questions</p>
-    </div>
-    <div class="flex-centre">
-      <p>
-        Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
-        Aliquam ultrices tellus consequat amet, lectus aliquam est in neque.?
-      </p>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">How soon will my order ship?</div>
-      <div class="faq-answer">3-5 business days</div>
-      <div class="faq-arrow">▼</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">Is there any warranty exclusions?</div>
-      <div class="faq-answer">1 year international warranty</div>
-      <div class="faq-arrow">▼</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">What is the return policy?</div>
-      <div class="faq-answer">
-        Returns are accepted within 30 days of purchase, as long as the product
-        is in its original condition and packaging.
-      </div>
-      <div class="faq-arrow">▼</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">Will I be charged for a replacement item?</div>
-      <div class="faq-answer">
-        No, there will be no charge for a replacement item if it is covered
-        under the warranty.
-      </div>
-      <div class="faq-arrow">▼</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">How can I track my order and payment?</div>
-      <div class="faq-answer">
-        You can track your order and payment by logging into your account on our
-        website. The tracking information will be updated as soon as it becomes
-        available.
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="test.css" />
+
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Welcome Back</h2>
+        </div>
+        <div class="modal-body">
+          <p>You are already registered!</p>
+        </div>
+        <div class="modal-footer">
+          <button id="ok-btn">OK</button>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </body>
+  <script src="test.js"></script>
+</html>
