--- a/index.html
+++ b/index.html
@@ -194,7 +194,10 @@
             </p>
           </div>
         </div>
-        <span><img src="../project/Images/robo-kid.png" alt="robo-kid" /></span>
+        <span
+          ><img src="../project/Images/robo-kid.png" alt="robo-kid" /
+          class="robo-kid"></span
+        >
       </div>
     </section>
 
