add new resposive page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../project/Css/navigation.css" />
     <link rel="stylesheet" href="../project/Css/firsSection.css" />
     <link rel="stylesheet" href="../project/Css/secondSection.css" />
+    <link rel="stylesheet" href="../project/Css/technology.css" />
     <link rel="stylesheet" href="../project/Css/thidsection.css" />
     <link rel="stylesheet" href="../project/Css/fourthsection.css" />
     <link rel="stylesheet" href="../project/Css/fifthSection.css" />
@@ -202,10 +203,11 @@
     </section>
 
     <section class="robot-technology-section area" id="services">
-      <div class="robot-technology-image-container">
+      <div class="robot-technology-image-container robo-sun">
         <img
+          class="robo-sun"
           src="../project/images/life-5130779_1920.png"
-          alt="Robot Technology Illustration"
+          alt="Robot Technology Illustratio"
         />
       </div>
       <div class="robot-technology-text-container">
