--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <p>Frequently Asked Questions</p>
         </div>
         <div class="flex-centre">
-          <p>
+          <p class="faq-intro">
             Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
             Aliquam ultrices tellus consequat amet, lectus aliquam est in
             neque.?
